# kermplus

./: .devdbrc  .dockerignore  .env.example  composer.json  docker-compose.yml  package-lock.json
apk/: README.md  go.mod  main.go
config/: autofill.php  nutgram.php  payments.php  services.php
docker/: form.Dockerfile  laravel.Dockerfile  sms.Dockerfile  telegram-reporter.Dockerfile
form/: go.mod  go.sum  main.go
kermApp/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  bot_developer_guide.md  composer.json  developer_guide.md  phpunit.xml  (+1 more)
telegram-reporter/: .gitignore  README.md  api_server.py  app.py  config.py  import_sessions_dir.py  pyproject.toml  sessions.db  utils.py
telegram-reporter/controllers/: __init__.py  add_channel.py  base.py  reaction.py  remove_channel.py  report_account.py  report_message.py  status.py  upload_session.py
telegram-reporter/core/: async_input.py  client.py  manager.py
telegram-reporter/database/: __init__.py  channel.py  session.py
telegram-reporter/handlers/: __init__.py  on_callback_query.py  on_channel_message.py  on_message.py
telegram-reporter/lib/: api.py
telegram-reporter/services/: __init__.py  channels.py  chatinfo.py  reports.py  sessions.py  status.py
telegram-reporter/sessions/1/: data.db  file_checker.txt
telegram-reporter/sessions/2/: data.db  file_checker.txt
telegram-reporter/sessions/3/: data.db  file_checker.txt
telegram-reporter/sessions/4/: data.db  file_checker.txt
telegram-reporter/sessions/5/: data.db  file_checker.txt
telegram-reporter/sessions/6/: data.db  file_checker.txt
(+197 files in other folders)
